added lesson quote api test, and removed a whole bunch of unnecessary logs. Also removed lessonQuote.expiredAt
